plugins {
   id 'java'
   id 'org.springframework.boot' version '3.5.4'
   id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.ex'
version = '0.0.1-SNAPSHOT'

java {
   toolchain {
      languageVersion = JavaLanguageVersion.of(21)
   }
}

configurations {
   compileOnly {
      extendsFrom annotationProcessor
   }
}

repositories {
   mavenCentral()
}

dependencies {
   // Spring WEB && Test
   implementation 'org.springframework.boot:spring-boot-starter-web'
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
   testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

   // Ai 관련
   implementation 'org.springframework.boot:spring-boot-starter-webflux'

   // Devtools
   developmentOnly 'org.springframework.boot:spring-boot-devtools'

   // Lombok
   compileOnly 'org.projectlombok:lombok'
   annotationProcessor 'org.projectlombok:lombok'

   // Thymeleaf
   implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
   implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'

   // JPA
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

   // MyBatis
   runtimeOnly 'com.oracle.database.jdbc:ojdbc17'
   implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.5'
   testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.5'

   // Validation
   implementation 'org.springframework.boot:spring-boot-starter-validation'

   // Security
   implementation 'org.springframework.boot:spring-boot-starter-security'

   // Security 와 Thymeleaf 연동
   implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

   // WebSocket
   implementation 'org.springframework.boot:spring-boot-starter-websocket'

   // coolsms
   implementation 'net.nurigo:sdk:4.2.7'
   
   // gpt
   implementation 'com.theokanning.openai-gpt3-java:service:0.14.0'

   // 
   implementation("com.squareup.okhttp3:okhttp:4.10.0")
   implementation("com.squareup.okio:okio:2.10.0")

   implementation("com.theokanning.openai-gpt3-java:service:0.14.0") {
      exclude group: "com.squareup.okio", module: "okio"
   }
   implementation("net.nurigo:sdk:4.2.7") {
      exclude group: "com.squareup.okio", module: "okio"
   }
   // gmail
   implementation 'org.springframework.boot:spring-boot-starter-mail'
}

tasks.named('test') {
   useJUnitPlatform()
}

configurations.all {
   resolutionStrategy.eachDependency { d ->
      if (d.requested.group == "com.squareup.okio") d.useVersion("2.10.0")
      if (d.requested.group == "com.squareup.okhttp3") d.useVersion("4.10.0")
   }
}

// 후보가 com.ex.final22c.Final22cApplication 과 com.ex.final22c.Application 두 개였으니, 실제 @SpringBootApplication 달린 쪽으로 지정.
springBoot {
    mainClass = 'com.ex.final22c.Final22cApplication'   // 실제 메인 하나로 고정
}